small fix of jumping filter buttons

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ header {
 nav {
     height: fit-content;
 
-    padding: 0px 300px;
+    padding: 0px 320px;
     margin-top: 10px;
 
     display: flex;
